API 딕셔너리에 넣기 완료

--- a/subwayGame.ipynb
+++ b/subwayGame.ipynb
@@ -12,45 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "from interface_function import drinkingGame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# url = \"https://comic.naver.com/webtoon/weekdayList?week=thu\"\n",
-    "# response = requests.get(url)\n",
-    "\n",
-    "# print(response)\n",
-    "\n",
-    "# print(response.text[:100])\n",
-    "# soup = bs(response.text, \"html.parser\")\n",
-    "# # 이렇게 파싱된 BeautifulSoup 객체는 여러 활용법을 가지고 있다.\n",
-    "\n",
-    "# print(type(soup))\n",
-    "# print(soup)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from interface_function import drinkingGame\n",
+    "from bs4 import BeautifulSoup as bs\n",
     "from random import randint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,19 +35,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\82109\\anaconda3\\envs\\env_dsd\\lib\\site-packages\\bs4\\builder\\__init__.py:545: XMLParsedAsHTMLWarning: It looks like you're parsing an XML document using an HTML parser. If this really is an HTML document (maybe it's XHTML?), you can ignore or filter this warning. If it's XML, you should know that using an XML parser will be more reliable. To parse this document as XML, make sure you have the lxml package installed, and pass the keyword argument `features=\"xml\"` into the BeautifulSoup constructor.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "url =\"http://openapi.seoul.go.kr:8088/645a615953616263353156426b7544/xml/SearchSTNBySubwayLineInfo/1/768/\"\n",
+    "\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "soup = bs(response.text, \"html.parser\")\n",
+    "\n",
+    "stations = soup.select(\"row\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stationDict = dict()\n",
+    "\n",
+    "#1호선부터 9호선 추가\n",
+    "for i in range(1, 10):\n",
+    "  numberStationList = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == f\"0{i}호선\"]\n",
+    "  stationDict[f\"{i}호선\"] = numberStationList\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"인천선\"]\n",
+    "stationDict[\"인천1호선\"] = temp\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"인천2호선\"]\n",
+    "stationDict[\"인천2호선\"] = temp\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"수인분당선\"]\n",
+    "stationDict[\"수인분당선\"] = temp\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"신분당선\"]\n",
+    "stationDict[\"신분당선\"] = temp\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"경의선\"]\n",
+    "stationDict[\"경의중앙선\"] = temp\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"공항철도\"]\n",
+    "stationDict[\"공항철도선\"] = temp\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"경춘선\"]\n",
+    "stationDict[\"경춘선\"] = temp\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"의정부경전철\"]\n",
+    "stationDict[\"의정부경전철\"] = temp\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"용인경전철\"]\n",
+    "stationDict[\"용인경전철\"] = temp\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"경강선\"]\n",
+    "stationDict[\"경강선\"] = temp\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"우이신설경전철\"]\n",
+    "stationDict[\"우이신설경전철\"] = temp\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"서해선\"]\n",
+    "stationDict[\"서해선\"] = temp\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"김포도시철도\"]\n",
+    "stationDict[\"김포도시철도선\"] = temp\n",
+    "\n",
+    "temp = [ele.select_one(\"station_nm\").text for ele in stations if ele.select_one(\"line_num\").text == \"신림선\"]\n",
+    "stationDict[\"신림선\"] = temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(stationDict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
     "class subwayGame(drinkingGame):\n",
     "  \n",
-    "  subwayList = [\"1호선\",\"2호선\", \"3호선\", \"4호선\", \"5호선\", \"6호선\", \"7호선\", \"8호선\", \"9호선\", \"인천1호선\", \"인청2호선\", \"수인분당선\"\\\n",
-    "    ,\"신분당선\", \"경의중앙선\", \"공항철도선\", \"경춘선\", \"의정부경전철\", \"용인경전철\", \"경강선\", \"우이신설경전철\", \"서해선\", \"김포시철도선\", \"신림선\"]\n",
-    "  def __init__(self, playerList, playerLimit, loseCount):\n",
+    "  subwayList = [\"1호선\",\"2호선\", \"3호선\", \"4호선\", \"5호선\", \"6호선\", \"7호선\", \"8호선\", \"9호선\", \"인천1호선\", \"인천2호선\", \"수인분당선\"\\\n",
+    "    ,\"신분당선\", \"경의중앙선\", \"공항철도선\", \"경춘선\", \"의정부경전철\", \"용인경전철\", \"경강선\", \"우이신설경전철\", \"서해선\", \"김포도시철도선\", \"신림선\"]\n",
+    "  \n",
+    "  def __init__(self, playerList, playerLimit, loseCount, stationDict):\n",
+    "    self.stationDict = stationDict\n",
     "    super().__init__(playerList, playerLimit, loseCount)\n",
     "  \n",
     "  def subwayGameStart(self):\n",
-    "    print(self.subwayList)\n",
+    "\n",
     "    subwayLine = \"\"\n",
     "    if self.lastLoser != self.playerList[0]:\n",
     "      idx = randint(0, len(self.subwayList)-1)\n",
@@ -81,24 +146,30 @@
     "      print(f\"지하철~🚇 지하철~🚇 지하철~🚇 지하철~🚇 몇호선~? {subwayLine}\")\n",
     "    else:\n",
     "      subwayLine = input(\"지하철~🚇 지하철~🚇 지하철~🚇 지하철~🚇 몇호선~? : \")\n",
+    "      while subwayLine not in self.stationDict:\n",
+    "        print(\"살리고~~~ 살리고~~~ 살리고~ 살리고~ 살리고~\")\n",
+    "        print(\"지하철 호선 목록: \", \" \".join(self.subwayList))\n",
+    "        subwayLine = input(\"지하철~🚇 지하철~🚇 지하철~🚇 지하철~🚇 몇호선~? : \")\n",
+    "      \n",
+    "      idx = playerList.index(self.lastLoser)\n",
+    "      wrongAnswer = False\n",
+    "      while not wrongAnswer:\n",
+    "        for i in range(len(playerList)):\n",
+    "          \n",
+    "        \n",
+    "      \n",
+    "      \n",
+    "    \n",
     "      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 154,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1호선', '2호선', '3호선', '4호선', '5호선', '6호선', '7호선', '8호선', '9호선', '인천1호선', '인청2호선', '수인분당선', '신분당선', '경의중앙선', '공항철도선', '경춘선', '의정부경전철', '용인경전철', '경강선', '우이신설경전철', '서해선', '김포시철도선', '신림선']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sub = subwayGame(playerList, playerLimit, loseCount)\n",
+    "sub = subwayGame(playerList, playerLimit, loseCount, stationDict)\n",
     "sub.subwayGameStart()"
    ]
   }
