지하철 게임 답 말하기 구현 중

--- a/subwayGame.ipynb
+++ b/subwayGame.ipynb
@@ -153,8 +153,19 @@
     "      \n",
     "      idx = playerList.index(self.lastLoser)\n",
     "      wrongAnswer = False\n",
+    "      answerList = []\n",
+    "      correctSubway = self.stationDict[subwayLine]\n",
+    "      num = len(correctSubway)\n",
     "      while not wrongAnswer:\n",
     "        for i in range(len(playerList)):\n",
+    "          if playerList[idx] == self.userName:\n",
+    "            answer = input(f\"{self.userName}의 차례입니다. {subwayLine}의 역을 하나 말해주세요: \")\n",
+    "          else:\n",
+    "            answer = correctSubway[randint(0, num-1)]\n",
+    "            \n",
+    "          if answer not in correctSubway or answer in answerList: #호선이 틀리거나 중복된 경우\n",
+    "            wrongAnswer = True\n",
+    "            self.lastLoser = playerList[idx]\n",
     "          \n",
     "        \n",
     "      \n",
