지하철 게임 구현 완료

--- a/subwayGame.ipynb
+++ b/subwayGame.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,6 @@
     "    super().__init__(playerList, playerLimit, loseCount)\n",
     "  \n",
     "  def subwayGameStart(self):\n",
-    "\n",
     "    subwayLine = \"\"\n",
     "    if self.lastLoser != self.playerList[0]:\n",
     "      idx = randint(0, len(self.subwayList)-1)\n",
@@ -163,18 +162,40 @@
     "      wrongAnswer = False\n",
     "      answerList = []\n",
     "      correctSubway = self.stationDict[subwayLine]\n",
-    "      num = len(correctSubway)\n",
+    "      if subwayLine != \"2호선\":\n",
+    "        wrongSubway = self.stationDict[\"2호선\"][:10]\n",
+    "      else:\n",
+    "        wrongSubway = self.stationDict[\"1호선\"][:10]\n",
+    "      computerSubway = correctSubway + wrongSubway\n",
+    "      print(correctSubway)\n",
+    "      num = len(computerSubway)\n",
+    "      \n",
+    "\n",
     "      while not wrongAnswer:\n",
-    "        for i in range(len(playerList)):\n",
-    "          if playerList[idx] == self.userName:\n",
-    "            answer = input(f\"{self.userName}의 차례입니다. {subwayLine}의 역을 하나 말해주세요: \")\n",
-    "          else:\n",
-    "            answer = correctSubway[randint(0, num-1)]\n",
-    "            \n",
-    "          if answer not in correctSubway or answer in answerList: #호선이 틀리거나 중복된 경우\n",
-    "            wrongAnswer = True\n",
-    "            self.lastLoser = playerList[idx]\n",
-    "          \n",
+    "        # for i in range(len(playerList)):\n",
+    "        if playerList[idx] == playerList[0]:\n",
+    "          answer = input(f\"{playerList[0]}의 차례입니다. {subwayLine}의 역을 하나 말해주세요: \")\n",
+    "          answer =answer[:-1]\n",
+    "        else:\n",
+    "          answer = computerSubway[randint(0, num-1)]\n",
+    "          print(f\"{playerList[idx]}의 차례입니다. {subwayLine}의 역을 하나 말해주세요: {answer}역\")\n",
+    "        print(answer)\n",
+    "        \n",
+    "        if answer not in correctSubway:\n",
+    "          print(f\"땡! {answer}는 {subwayLine}이 아닙니다. 마셔~ 마셔~ 먹고 뒤져~🍾\")\n",
+    "          wrongAnswer = True\n",
+    "          self.lastLoser = playerList[idx]\n",
+    "          break\n",
+    "        elif answer in answerList: #호선이 틀리거나 중복된 경우\n",
+    "          print(\"땡! 이미 말한 역입니다. 마셔~ 마셔~ 먹고 뒤져~🍾\")\n",
+    "          wrongAnswer = True\n",
+    "          self.lastLoser = playerList[idx]\n",
+    "          break\n",
+    "        answerList.append(answer)\n",
+    "\n",
+    "        idx += 1\n",
+    "        if idx ==len(playerList):\n",
+    "          idx = 0\n",
     "        \n",
     "      \n",
     "      \n"
@@ -182,9 +203,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 198,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['학여울', '구파발', '종로3가', '수서', '을지로3가', '신사', '연신내', '무악재', '약수', '잠원', '대청', '일원', '독립문', '고속터미널', '도곡', '경찰병원', '경복궁', '금호', '교대', '양재', '대치', '옥수', '남부터미널', '안국', '홍제', '충무로', '지축', '동대입구', '압구정', '매봉', '불광', '녹번', '오금', '가락시장', '원흥', '삼송', '화정', '대곡', '백석', '마두', '정발산', '주엽', '대화', '원당']\n",
+      "교대\n",
+      "중복x\n",
+      "건이의 차례입니다. 3호선의 역을 하나 말해주세요: 도곡역\n",
+      "도곡\n",
+      "중복x\n",
+      "유민의 차례입니다. 3호선의 역을 하나 말해주세요: 고속터미널역\n",
+      "고속터미널\n",
+      "중복x\n",
+      "수서\n",
+      "중복x\n",
+      "건이의 차례입니다. 3호선의 역을 하나 말해주세요: 신사역\n",
+      "신사\n",
+      "중복x\n",
+      "유민의 차례입니다. 3호선의 역을 하나 말해주세요: 일원역\n",
+      "일원\n",
+      "중복x\n",
+      "서울대입구\n",
+      "땡! 서울대입구는 3호선이 아닙니다. 마셔~ 마셔~ 먹고 뒤져~🍾\n"
+     ]
+    }
+   ],
    "source": [
     "sub = subwayGame(playerList, playerLimit, loseCount, stationDict)\n",
     "sub.subwayGameStart()"
